# Dokis

./: .gitignore  Agents.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  llms.txt  provenance.toml  pyproject.toml  sample_audit.json  sample_stale_audit.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  run_claim_extraction.py
benchmarks/results/claim_extraction/: claimify_selection_summary.json  claimify_selection_summary.md
dokis/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  formatter.py  middleware.py  models.py
dokis/adapters/: langchain.py  llamaindex.py
dokis/core/: enforcer.py  extractor.py  freshness.py  matcher.py  scorer.py
tests/: conftest.py  test_adapters.py  test_benchmarks.py  test_cli.py  test_config.py  test_enforcer.py  test_extractor.py  test_freshness.py  test_init.py  test_matcher.py  test_middleware.py  test_scorer.py
