[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dokis"
version = "0.1.0"
description = "Lightweight RAG provenance middleware. Verifies every claim in an LLM response is grounded in a retrieved source - without an LLM call."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rag","provenance","hallucination","langchain","llm","citation","compliance","retrieval-augmented-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "bm25s>=0.2",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
nltk = ["nltk>=3.8"]
semantic = ["sentence-transformers>=2.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "nltk>=3.8",
    "sentence-transformers>=2.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Vbj1808/dokis"
Repository = "https://github.com/Vbj1808/dokis"
Issues = "https://github.com/Vbj1808/dokis/issues"
Changelog = "https://github.com/Vbj1808/dokis/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["dokis*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.10"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
